# networth_dashboard

./: .gitignore  Makefile  PROPERTY_INVESTMENT_FORMULAS.md  README.md  main.py  package-lock.json  pyproject.toml
.streamlit/: config.toml
src/: config.py  homepage.py  main.py
src/pages/: company_property_investing.py  mortgage_repayment_calculator.py  networth_simulator.py  networth_tracker.py
src/utils/: auth.py  currency.py  db.py  models.py  tracker_balances.py
supabase/migrations/: 20240320000000_create_user_tables.sql  cleanup.sql
