[project]
name = "networth-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.45.0",
    "supabase>=2.13.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
lint = [
    "ruff>=0.9.10",
]
